Hiding unfinished pages

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,10 +3,10 @@
 <a href="/" class="text-xl font-bold text-indigo-600">Nil's Portfolio</a>
 <div class="flex gap-6 text-gray-700 font-medium">
 <a href="/" class="hover:text-indigo-600">Home</a>
-<a href="/cv" class="hover:text-indigo-600">CV</a>
-<a href="/projects" class="hover:text-indigo-600">Projects</a>
-<a href="/trajectory" class="hover:text-indigo-600">Trajectory</a>
-<a href="/interests" class="hover:text-indigo-600">Interests</a>
+<!--a href="/cv" class="hover:text-indigo-600">CV</a-->
+<!--a href="/projects" class="hover:text-indigo-600">Projects</a-->
+<!--a href="/trajectory" class="hover:text-indigo-600">Trajectory</a-->
+<!--a href="/interests" class="hover:text-indigo-600">Interests</a-->
 </div>
 </div>
 </nav>
