Uploading new page: trajectory

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -5,7 +5,7 @@
 <a href="/" class="hover:text-indigo-600">Home</a>
 <!--a href="/cv" class="hover:text-indigo-600">CV</a-->
 <!--a href="/projects" class="hover:text-indigo-600">Projects</a-->
-<!--a href="/trajectory" class="hover:text-indigo-600">Trajectory</a-->
+<a href="/trajectory" class="hover:text-indigo-600">Trajectory</a>
 <!--a href="/interests" class="hover:text-indigo-600">Interests</a-->
 </div>
 </div>
