Modifying footer and optimizing

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en" class="scroll-smooth">
@@ -14,5 +15,6 @@ import Navbar from "../components/Navbar.astro";
         <main class="px-6 md:px-16 lg:px-32 py-8">
             <slot />
         </main>
+        <Footer />
     </body>
 </html>
