--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import { Image } from "astro:assets";
 ---
 
 <BaseLayout>
@@ -22,6 +23,35 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       Telecommunications Engineer · Master’s in Artificial Intelligence
     </p>
 
+    <div class="mt-4 flex flex-wrap justify-center gap-5">
+      <a
+        href="https://www.linkedin.com/in/nilmunte"
+        target="_blank"
+        class="hover:text-blue-600"
+      >
+        <Image
+          src="/logos/linkedin.png"
+          alt="LinkedIn"
+          width="25"
+          height="25"
+          loading="eager"
+        />
+      </a>
+      <a
+        href="https://github.com/nil-munte"
+        target="_blank"
+        class="hover:text-gray-800"
+      >
+        <Image
+          src="/logos/github-mark.png"
+          alt="LinkedIn"
+          width="25"
+          height="25"
+          loading="eager"
+        />
+      </a>
+    </div>
+
     <!-- Short Presentation -->
     <p class="mt-10 max-w-3xl text-gray-700 leading-relaxed text-lg md:text-xl">
       With hands-on experience in embedded systems, software development,
@@ -33,22 +63,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
     <!-- Links -->
     <div class="mt-10 flex flex-wrap justify-center gap-4">
-      <a
-        href="https://www.linkedin.com/in/nilmunte/"
-        target="_blank"
-        class="px-6 py-3 bg-blue-600 text-white font-semibold rounded-xl shadow-md
-             hover:bg-blue-700 hover:-translate-y-0.5 active:translate-y-0 transition-all"
-      >
-        LinkedIn
-      </a>
-      <a
-        href="https://github.com/nil-munte"
-        target="_blank"
-        class="px-6 py-3 bg-gray-900 text-white font-semibold rounded-xl shadow-md
-             hover:bg-gray-800 hover:-translate-y-0.5 active:translate-y-0 transition-all"
-      >
-        GitHub
-      </a>
       <a
         href="info/Executive_CV_Nil_Munte_Guerrero_ENG.pdf"
         download
