--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,8 @@
 import "../styles/global.css";
 import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
+
+const currentPath = Astro.url.pathname; // get current page path
 ---
 
 <html lang="en" class="scroll-smooth">
@@ -11,7 +13,7 @@ import Footer from "../components/Footer.astro";
         <title>Nil's Portfolio</title>
     </head>
     <body class="bg-gray-50 text-gray-800">
-        <Navbar />
+        <Navbar currentPath={currentPath} />
         <main class="px-6 md:px-16 lg:px-32 py-8">
             <slot />
         </main>
