--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import { Image } from "astro:assets";
       <a
         href="https://www.linkedin.com/in/nilmunte"
         target="_blank"
-        class="hover:text-blue-600"
+        class="hover:text-blue-600 hover:-translate-y-0.5 active:translate-y-0 transition-all"
       >
         <Image
           src="/logos/linkedin.png"
@@ -40,7 +40,7 @@ import { Image } from "astro:assets";
       <a
         href="https://github.com/nil-munte"
         target="_blank"
-        class="hover:text-gray-800"
+        class="hover:text-gray-800 hover:-translate-y-0.5 active:translate-y-0 transition-all"
       >
         <Image
           src="/logos/github-mark.png"
