--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,8 +1,11 @@
 ---
 const { title, description, link } = Astro.props;
 ---
+
 <div class="bg-white shadow rounded-xl p-6 hover:shadow-lg transition">
-<h3 class="text-xl font-semibold mb-2 text-indigo-600">{title}</h3>
-<p class="text-gray-700 mb-4">{description}</p>
-<a href={link} class="text-indigo-500 hover:underline">View Project →</a>
+    <h3 class="text-xl font-semibold mb-2 text-indigo-600">{title}</h3>
+    <p class="text-gray-700 mb-4">{description}</p>
+    <a href={link} target="_blank" class="text-indigo-500 hover:underline"
+        >View Project →</a
+    >
 </div>
