--- a/src/pages/about_me.astro
+++ b/src/pages/about_me.astro
@@ -3,7 +3,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-
     <h2 class="text-3xl font-bold mb-10 text-center">About Me</h2>
     <!-- Aligned Gradient Line -->
 
@@ -14,11 +13,48 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     </div>
 
     <div
-    class="bg-white shadow p-6 rounded-2xl hover:shadow-lg max-w-4xl mx-auto my-8 transition"
+        class="bg-white shadow p-6 rounded-2xl hover:shadow-lg max-w-4xl mx-auto my-8 transition"
     >
         <p class="text-gray-700 leading-relaxed text-justify mb-4">
             I studied <strong>Telecommunications Engineering</strong> and completed
             a <strong>Master’s in Artificial Intelligence</strong>.
         </p>
+
+        <p class="text-gray-700 leading-relaxed text-justify mb-4">
+            In my free time, I really like hiking and going to the mountain.
+        </p>
+        
+        <div
+            class="grid grid-cols-1 md:grid-cols-3 gap-6 max-w-6xl mx-auto my-5"
+        >
+            <div
+                class="strava-embed-placeholder"
+                data-embed-type="activity"
+                data-embed-id="16546658485"
+                data-style="standard"
+                data-from-embed="false"
+            >
+            </div>
+            <div
+                class="strava-embed-placeholder"
+                data-embed-type="activity"
+                data-embed-id="16440414987"
+                data-style="standard"
+                data-from-embed="false"
+            >
+            </div>
+            <div
+                class="strava-embed-placeholder"
+                data-embed-type="activity"
+                data-embed-id="14300206067"
+                data-style="standard"
+                data-from-embed="false"
+            >
+            </div>
+        </div>
+
+        
+
+        <script is:inline src="https://strava-embeds.com/embed.js"></script>
     </div>
 </BaseLayout>
